# bonk-backend-system-service

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine  README.md  docker-compose.yml  openapi.yaml
.github/workflows/: deploy.yml
backend/: Cargo.toml  README.md
backend/migrations/2023-07-18-094825_create_game/: up.sql
backend/migrations/2023-07-18-095324_create_score/: down.sql  up.sql
backend/migrations/2024-03-04-172023_create_level/: up.sql
backend/migrations/2024-03-04-172627_update_score_with_level/: down.sql  up.sql
backend/migrations/2024-10-25-195946_create_user/: up.sql
backend/migrations/2024-10-25-200128_update_score_with_user/: down.sql  up.sql
backend/migrations/2024-10-25-201447_update_score_remove_game/: down.sql  up.sql
backend/src/: error.rs  main.rs  respone.rs  response.rs  routes.rs  schema.rs
backend/src/config/: db.rs  oauth2.rs
backend/src/controller/: auth.rs  mod.rs
backend/src/controller/api/: game.rs  level.rs  mod.rs  score.rs  stats.rs  user.rs
backend/src/middleware/: auth_middleware.rs
backend/src/models/: game.rs  level.rs  mod.rs  respone.rs  score.rs  stats.rs  user.rs
backend/src/service/: game_service.rs  level_service.rs  mod.rs  oauth2_service.rs  score_service.rs  stats_service.rs  user_service.rs
common/: Cargo.toml
common/src/: models.rs
frontend/: Cargo.toml  README.md  Trunk.toml  build.rs  index.html  package-lock.json  package.json  sw.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  app.rs  main.rs  main.ts
frontend/src/assets/: index.css
frontend/src/components/: DataTable.vue  DataTablePagination.vue  Header.vue  Sidebar.vue  alert.rs  app_bar.rs  button.rs  checkbox.rs  dialog.rs  drawer.rs  form_control.rs  form_label.rs  icon.rs  input.rs  list.rs  list_item.rs  list_item_button.rs  list_item_icon.rs  mod.rs  paper.rs  select.rs  spinner.rs  stats_card.rs  tab.rs  table.rs  table_body.rs  table_cell.rs  table_container.rs  table_context.rs  table_footer.rs  table_head.rs  table_pagination.rs  table_row.rs  tabs.rs  text_field.rs  toolbar.rs
frontend/src/components/layout/: GameLayout.vue  MainLayout.vue
frontend/src/components/ui/table/: TableCell.vue
frontend/src/components/ui/tabs/: TabsList.vue  TabsTrigger.vue
frontend/src/layouts/: game_layout.rs  main_layout.rs  mod.rs
frontend/src/lib/: ApiService.ts  AuthService.ts  utils.ts
frontend/src/lib/Models/: Game.ts  Level.ts  Score.ts  Stats.ts  User.ts  index.ts
frontend/src/models/: game.rs  level.rs  mod.rs  oauth.rs
frontend/src/pages/: authenticate.rs  home.rs  mod.rs
frontend/src/pages/app/: game.rs  home.rs  levels.rs  mod.rs  score_form.rs  scores.rs  settings.rs
frontend/src/providers/: authentication_provider.rs  authetication_provider.rs  mod.rs
frontend/src/router/: app.ts  index.ts
frontend/src/service/: fetch.rs
frontend/src/views/: Authenticate.vue  HomeView.vue
frontend/src/views/app/: AppHome.vue  Game.vue  Home.vue  Level.vue  Levels.vue  ScoreForm.vue  Scores.vue  Settings.vue  User.vue
migrations/: 20230712120134_create_game.down.sql  20230712120134_create_game.up.sql  20230712124136_create_score.down.sql  20230712124136_create_score.up.sql  20230712130359_create_user.up.sql
migrations/2023-07-18-094825_create_game/: up.sql
migrations/2023-07-18-095331_create_user/: up.sql
migrations/2024-03-04-172023_create_level/: down.sql
migrations/2024-03-04-172627_update_score_with_level/: down.sql  up.sql
src/: error.rs  lib.rs  main.rs  models.rs  schema.rs
src/config/: mod.rs  oauth2.rs
src/controller/: auth.rs  mod.rs  score.rs
src/controller/api/: game.rs  mod.rs  score.rs
src/entity/: game.rs  score.rs  user.rs
src/middleware/: auth_middleware.rs
src/models/: game.rs  mod.rs  score.rs  user.rs
src/repository/: game_repository.rs  mod.rs  score_repository.rs
src/service/: game_service.rs  mod.rs  oauth2_service.rs  score_service.rs
