[package]
name = "babs"
version = "0.1.0"
authors = ["Traxx186"]
edition = "2021"
rust-version = "1.74"
readme = "README.md"

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.4", features = ["postgres", "chrono", "uuid", "r2d2"], optional = true }
serde = { version = "1.0.192", features = ["derive"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }

[features]
backend = ["diesel"]

[workspace]
members = ["backend", "frontend"]
default-members = ["backend"]
