[package]
name = "babs"
version = "0.1.0"
authors = ["Traxx186"]
edition = "2021"
rust-version = "1.76"
readme = "README.md"

[dependencies]
chrono = { version = "0.4.37", features = ["serde"] }
diesel = { version = "2.1.5", features = ["postgres", "chrono", "uuid", "r2d2"], optional = true }
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }

[features]
backend = ["diesel"]

[workspace]
members = ["backend", "frontend"]
default-members = ["backend"]
