[package]
name = "babs"
version = "0.2.0"
authors = ["Traxx186"]
edition = "2021"
readme = "README.md"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.2", features = ["postgres", "chrono", "uuid", "r2d2"], optional = true }
serde = { version = "1.0.206", features = ["derive"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }

[features]
backend = ["diesel"]

[workspace]
members = ["backend", "frontend"]
default-members = ["backend"]
