[package]
name = "babs-server"
version = "0.2.0"
authors = ["Traxx186"]
edition = "2021"
readme = "README.md"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
chrono = { version = "0.4.39", features = ["serde"] }
diesel = { version = "2.2.6", features = ["postgres", "chrono", "uuid", "r2d2"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15.7"
env_logger = "0.11.6"
jsonwebtoken = "9.3.0"
log = "0.4.22"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
utoipa = { version = "5.3.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8.1.0", features = ["axum", "reqwest"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
