[package]
name = "babs_common"
version = "0.1.0"
authors = ["Traxx186"]
edition = "2021"
rust-version = "1.70"
readme = "README.md"

[dependencies]
chrono = { version = "0.4.30", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }