[package]
name = "babs_frontend"
version = "0.1.0"
authors = ["Traxx186"]
edition = "2021"
rust-version = "1.76"
readme = "README.md"

[dependencies]
babs = { version = "0.1.0", path = ".." }
getrandom = { version = "0.2.12", features = ["js"] }
reqwasm = "0.5.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde-wasm-bindgen = "0.6.5"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
wasm-bindgen = "0.2.92"
wasm-logger = "0.2.0"
wasm-bindgen-futures = "0.4.42"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"

[dependencies.web-sys]
version = "0.3.69"
features = [
    "HtmlDocument",
    "HtmlInputElement",
    "HtmlSelectElement",
    "Storage",
    "Window",
    "console",
]

[build-dependencies]
dotenvy = "0.15.7"